--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -5,47 +5,43 @@ on:
     branches:
       - develop
 
-env:
-  NODE_VERSION: 11.x
-  PHP_VERSION: 7.4
-
 jobs:
-  build-and-publish:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Use Node.js
+      - name: Use Node.js 11.x
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      - name: Use PHP ${{ env.PHP_VERSION }}
-        run: sudo update-alternatives --set php /usr/bin/php{{ env.PHP_VERSION }}
-
-      - name: Install Composer
-        run: curl -sS https://getcomposer.org/installer | php
+          node-version: 11.x
 
       - name: Build Frontend
+        working-directory: ./client
         run: |
-          cd client
           npm install
           npm rebuild node-sass
           npm run build
 
+      - name: Install PHP 7.4 and Composer
+        run: |
+          sudo add-apt-repository ppa:ondrej/php
+          sudo apt-get update
+          sudo apt-get install -y php7.4
+          sudo apt-get install -y curl
+          sudo curl -sS https://getcomposer.org/installer | php
+          sudo mv composer.phar /usr/local/bin/composer
+
       - name: Build Backend
+        working-directory: ./
         run: |
           cd server
-          composer update
           composer install
-
-      - name: Package App
-        run: |
-          cd ..
           echo -n > config.php
           mkdir files2
-          cp server/files/.htaccess files2
+          cp files/.htaccess files2
+          cd ..
           mkdir api
           mkdir api/files
           cp server/index.php api
@@ -57,8 +53,8 @@ jobs:
           cp -a server/libs api
           cp -a server/models api
           cp -a server/vendor api
-          cp -a files2/. api/files
-          rm -rf files2
+          cp -a server/files2/. api/files
+          rm -rf server/files2
           cp server/config.php api
           chmod -R 755 .
           cp client/src/index.php client/build
