add composer update

--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -37,6 +37,7 @@ jobs:
         working-directory: ./
         run: |
           cd server
+          composer update
           composer install
           echo -n > config.php
           mkdir files2
